--- a/content/publication/example/cite.bib
+++ b/content/publication/example/cite.bib
@@ -1,8 +1,8 @@
-@inproceedings{example1,
-  title={An example conference paper},
-  author={Bighetti, Nelson and Ford, Robert},
-  booktitle={Source Themes Conference},
+@inproceedings{1,
+  title={CGRA Cascading for Narrow Memory Bandwidth and Low Cost},
+  author={Jun IWAMOTO, Yuma KIKUTANI, Renyuan ZHANG, and Yasuhiko NAKASHIMA},
+  booktitle={xSIG 2019: The 3rd. cross-disciplinary Workshop on Computing Systems, Infrastructures, and Programming},
   pages={1--6},
-  year={2013},
-  organization={IEEE}
+  year={2019},
+  organization={IEICE}
 }
