--- a/content/publication/csa2019/cite.bib
+++ b/content/publication/csa2019/cite.bib
@@ -1,8 +1,8 @@
-@inproceedings{1,
+@inproceedings{2,
   title={Evaluation of a Chained Systolic Array with High-Speed Links},
   author={Jun IWAMOTO, Yuma KIKUTANI, Renyuan ZHANG, and Yasuhiko NAKASHIMA},
-  booktitle={ Proc. 7'th Int'l Workshop on Computer Systems and Architectures},
+  booktitle={Proc. 7'th Int'l Workshop on Computer Systems and Architectures},
   pages={1--6},
   year={2019},
-  organization={CSA}
+  organization={IEEE}
 }
